Bug 99464 - Crash LibreOffice Draw: when aplication close on holding open object style dialog
Summary: Crash LibreOffice Draw: when aplication close on holding open object style di...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords: haveBacktrace, regression
: 99670 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-04-23 03:05 UTC by sawakaze
Modified: 2016-10-25 19:03 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Detail Step2 (Screencapture) (142.44 KB, image/png)
2016-04-23 03:05 UTC, sawakaze
Details
bt with symbols (15.39 KB, text/plain)
2016-05-06 14:36 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sawakaze 2016-04-23 03:05:32 UTC
Created attachment 124583 [details]
Detail Step2 (Screencapture)

Hi,

After following steps, LibreOffice Draw is crash.

(1) Select object and right click and Edit style.
-> open Graphic Style Dialog.
(2) press [X] Button on application.(See Attachement)
-> open "save Document" dialog
(3) press "Don't Save"
--> Application Crash and Launch Recovery mode.

confirmed env

OS: Linux
Version: 5.2.0.0.alpha0+
Build ID: b19ac3c4c6b4a41a1f3acac68b299fd676428a87
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2016-04-21_08:41:08
Locale: en-US (C)

Note:
This Bug is not confirmed LibreOffice 5.1 .
Version: 5.1.0.2
Build ID: ecd3574d51754b043f865cf5bafee286d24db7cc

I think that this bug is Regression.

Regards,
Sawakaze.
Comment 1 Julien Nabet 2016-04-23 07:10:42 UTC
On pc Debian x86-64 with master sources updated yesterday, I don't reproduce this.
I mean, I click on X button to close application but it does nothing, so LO doesn't crash in my case.
Comment 2 Shinji Enoki 2016-04-23 07:46:51 UTC
I was reproduced in the following versions.

OS: Debian jessie
Version: 5.2.0.0.alpha1
Build ID: 902b28a39528b6c92602e9b521a1d0861be1caf9
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; 
Locale: en-US (ja_JP.utf8)

> (3) press "Don't Save"
> --> Application Crash and Launch Recovery mode.

"Don 't Save"  -> crash
"Save" -> "Save" (save dialog) -> crash
Comment 3 baffclan 2016-05-03 12:02:19 UTC
I can reproduce LibODev-Master

Windows 7 Pro(x64)
Version: 5.2.0.0.alpha0+ (x64)
Build ID: e8425c48102321d4f5a8bd687c8ca1ac7bae797e
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2016-04-20_16:47:56
Locale: ja-JP (ja_JP)
Comment 4 raal 2016-05-04 11:17:12 UTC
*** Bug 99670 has been marked as a duplicate of this bug. ***
Comment 5 baffclan 2016-05-04 11:53:31 UTC
*** Bug 99626 has been marked as a duplicate of this bug. ***
Comment 6 baffclan 2016-05-06 14:22:37 UTC
(In reply to raal from bug 99670 comment #2)
> I can confirm, Version: 5.2.0.0.alpha0+; win7
> 
> OK in bibisect-win32-5.1 latest:  Version: 5.1.0.1.0+
> Build ID: 5616d22b57a9a5e57d545e912e029162a230829b
> 
> BAD in bibisect-win32-5.2 oldest: Version: 5.1.0.0.alpha1+
> Build ID: 49c2b9808df8a6b197dec666dfc0cda6321a4306

+regression
Comment 7 Julien Nabet 2016-05-06 14:36:43 UTC
Created attachment 124885 [details]
bt with symbols

On pc Debian x86-64 with master sources updated today (27014f563577c3c5da19e37a57d4e73c0ebae140) + export SAL_USE_VCLPLUGIN=gen, I could reproduce this.

I don't reproduce this with SAL_USE_VCLPLUGIN=gtk3 because I can't close the application when edit window is there.
With gtk2, no crash too and I can close application.
Comment 8 Commit Notification 2016-05-11 20:22:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a7a96078ff5d7b0d5655db64e49ec4d48c6bb3f4

Resolves: tdf#99464 set what parent the dialogs are dialogs for

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2016-05-12 10:35:36 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3beb77bb6753a77b7d801fdc65fad78b98331813

Resolves: tdf#99464 don't allow a menu as a dialog parent

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.