Resolves: tdf#99464 don't allow a menu as a dialog parent

which is an issue since...

commit dd46727b99d4bb5135451aa7e5e1bdb197373843
Author: Caolán McNamara <caolanm@redhat.com>
Date:   Tue Apr 5 15:27:38 2016 +0100

    Resolves; tdf#87120 no keyboard navigation inside floating windows

    lets try and treat these the same as we do normal toplevels
    like dialogs if they popup with GrabFocus.

    This way focus can be set on widgets inside the floating windows, and
    so keyboard traversal of widgets etc all works.

which allows keyboard focus inside floatinging windows to allow
a11y keyboard navigation inside them without jumping through difficult hoops.

Its typically better to explicitly set the parent of the dialog rather
than depend no the auto-search stuff

Change-Id: I869f3ef6c86d32dd9a1f5b53a2677be9f16a1598